fixed style for collapse nav to show on mobile

--- a/src/components/Account/accountNav.css
+++ b/src/components/Account/accountNav.css
@@ -6,7 +6,7 @@
     display: block;
     list-style: none;
     text-align: left;
-    background: rgba(154, 205, 50, 0.3);
+    background: rgba(154, 205, 50, 0.4);
     border: 1px none lightgray;
     position: fixed;
     top: 6.8%;
@@ -16,7 +16,7 @@
     padding-top: 1%;
     padding-bottom: 1%;
   }
-  .acccount-link-show a {
+  .account-link > ul li {
     color: black;
   }
 }
@@ -31,8 +31,5 @@
     background: rgba(154, 205, 50, 0);
     border: 1px none lightgray;
     padding: 3%;
-  }
-  .account-link-mobile > a {
-    color: black;
   }
 }
